--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script src="interact.js"></script>
 <script src="scripts.js"></script>
 <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
-<script src="clock/js/index.js"></script>
+<script src="index.js"></script>
 <script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>
 
