--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="clock-style.css">
 <script src="interact.js"></script>
 <script src="scripts.js"></script>
-<script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
+<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js'></script>
 <script src="clock.js"></script>
 <script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>
